# Aula-AI.d

./: .env.example  .gitignore  README.md  api.py  app.py  config.py  docker-compose.yml  pyproject.toml
assets/: styles.css
backend/: api.py  config.py  prompts.json  pyproject.toml  weather_agent.py
docker/api/: Dockerfile
docker/app/: Dockerfile
frontend/: app.py  pyproject.toml
frontend/assets/: styles.css
frontend/pages/: agents.py  main.py
pages/: agents.py  main.py
scripts/: api.sh  app.sh
src/: agent.py  aula_client.py  constants.py  llm.py  research_tool.py  tools.py
