[tool.poetry]
name = "agent-frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"
dash-bootstrap-components = "^1.7.1"
python-dotenv = "^1.0.1"
dash-iconify = "^0.1.2"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
copcon = "^0.3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
